[Mac] Update tab close button when user drags outside

When clicking inside a button and dragging the mouse out of the button's
bounds, a button should update its appearance to show that its action
will not fire if the user releases the mouse. This cl fixes a problem
with the tab close button where it would always show the mouse down
state, even if you clicked and dragged outside of it.

This cl also does a little refactoring, moving common init-time code to
a commonInit method (like its HoverCloseButton subclass).

R=avi@chromium.org
BUG=647757

Review-Url: https://codereview.chromium.org/2898343002
Cr-Commit-Position: refs/heads/master@{#476463}

Former-commit-id: 40f734ce03b4693acb36388b7892dc67f863b65b